pretty much done

--- a/contactpage.html
+++ b/contactpage.html
@@ -6,5 +6,40 @@
     <title>Contact Me!</title>
     <link rel="stylesheet" href="contactpage.css" />
   </head>
-  <body></body>
+  <body>
+    <header>
+      <h1 id="main_title">
+        Natalia <span class="icon">&#10037;</span> Bukowska
+      </h1>
+      <div class="linkstriperight"></div>
+      <div class="linkstripeleft"></div>
+      <div class="clear"></div>
+      <nav>
+        <ul>
+          <li><a href="contactpage.html">Contact</a></li>
+          <li><a class="link2" href="#">Designs</a></li>
+        </ul>
+      </nav>
+    </header>
+
+    <section>
+      <main>
+        <p>How fun that you want to contact me!</p>
+      </main>
+      <div class="clear"></div>
+      <section class="form name">
+        <p class="formtext">Your name</p>
+      </section>
+      <section class="form mail">
+        <p class="formtext">Your mail</p>
+      </section>
+      <section class="form message">
+        <p class="formtext">Write your message</p>
+      </section>
+      <div>
+        <p class="send">Send Message</p>
+      </div>
+    </section>
+    <footer></footer>
+  </body>
 </html>
