--- a/portfolio.html
+++ b/portfolio.html
@@ -12,59 +12,39 @@
       <h1 id="main_title">
         Natalia <span class="icon">&#10037;</span> Bukowska
       </h1>
+      <div class="linkstriperight"></div>
+      <div class="linkstripeleft"></div>
+      <div class="clear"></div>
+      <nav>
+        <ul>
+          <li><a href="contactpage.html">Contact</a></li>
+          <li><a class="link2" href="#">Designs</a></li>
+        </ul>
+      </nav>
     </header>
-    <main>
-      <section>
-        <a href="contactpage.html"> Contact Me Here!</a>
-        <p>
-          "At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique sunt in culpa qui officia deserunt mollitia animi, id est
-          laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-          distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-          cumque nihil impedit quo minus id quod maxime placeat facere possimus,
-          omnis voluptas assumenda est, omnis dolor repellendus. Temporibus
-          autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe
-          eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-          Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
-          voluptatibus maiores alias consequatur aut perferendis doloribus
-          asperiores repellat."
-        </p>
-        <p>
-          "At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique sunt in culpa qui officia deserunt mollitia animi, id est
-          laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-          distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-          cumque nihil impedit quo minus id quod maxime placeat facere possimus,
-          omnis voluptas assumenda est, omnis dolor repellendus. Temporibus
-          autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe
-          eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-          Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
-          voluptatibus maiores alias consequatur aut perferendis doloribus
-          asperiores repellat."
-        </p>
-        <p>
-          "At vero eos et accusamus et iusto odio dignissimos ducimus qui
-          blanditiis praesentium voluptatum deleniti atque corrupti quos dolores
-          et quas molestias excepturi sint occaecati cupiditate non provident,
-          similique sunt in culpa qui officia deserunt mollitia animi, id est
-          laborum et dolorum fuga. Et harum quidem rerum facilis est et expedita
-          distinctio. Nam libero tempore, cum soluta nobis est eligendi optio
-          cumque nihil impedit quo minus id quod maxime placeat facere possimus,
-          omnis voluptas assumenda est, omnis dolor repellendus. Temporibus
-          autem quibusdam et aut officiis debitis aut rerum necessitatibus saepe
-          eveniet ut et voluptates repudiandae sint et molestiae non recusandae.
-          Itaque earum rerum hic tenetur a sapiente delectus, ut aut reiciendis
-          voluptatibus maiores alias consequatur aut perferendis doloribus
-          asperiores repellat."
+
+    <section>
+      <main>
+        <p>Hi! I'm Natalia</p>
+        <p class="moretext">A Graphic Designer</p>
+        <p class="moretext moretext2">from Sweden</p>
+        <a id="contact" href="contactpage.html">Contact me here</a>
+      </main>
+      <section class="decor1">
+        <figure class="image">
+          <img src="pexels-i-brahim-1225698921-27796657.jpg" alt="#" />
+        </figure>
+        <p class="info">Name: Natalia Bukowska</p>
+        <p class="info">Age: 19 Years old</p>
+        <p class="info">Skills: Website Design, Graphic Design, Typography</p>
+        <p class="info">
+          About: I'm a very passionate Graphic Designer from Sweden...
         </p>
       </section>
-    </main>
+    </section>
+    <div class="devider"></div>
+    <section class="designs">Designs... Coming soon</section>
     <footer></footer>
-
     <script src="portfolio.js"></script>
   </body>
 </html>
