fixing grid and design projects

--- a/contactpage.html
+++ b/contactpage.html
@@ -17,7 +17,7 @@
       <nav>
         <ul>
           <li><a href="contactpage.html">Contact</a></li>
-          <li><a class="link2" href="#">Designs</a></li>
+          <li><a class="link2" href="designs.html">Designs</a></li>
         </ul>
       </nav>
     </header>
