--- a/portfolio_old.html
+++ b/portfolio_old.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="portfolio.css" />
   </head>
   <body>
+    <!-- Hi! To clarify, I have prior knowledge about this. I had Webbutveckling 1 & 2 in highschool. Just wanted to write it here so you don't think I took this from somewhere and didn't quote it. This is how I've been learned and I hope everything is okay :)-->
     <header>
       <h1 id="main_title">
         Natalia <span class="icon">&#10037;</span> Bukowska
@@ -17,7 +18,7 @@
       <nav>
         <ul>
           <li><a href="contactpage.html">Contact</a></li>
-          <li><a class="link2" href="designs.html">Designs</a></li>
+          <li><a class="link2" href="#">Designs</a></li>
         </ul>
       </nav>
     </header>
@@ -41,6 +42,8 @@
         </p>
       </section>
     </section>
+    <div class="devider"></div>
+    <section class="designs">Designs... Coming soon</section>
     <footer></footer>
     <script src="portfolio.js"></script>
   </body>
