detailed design started

--- a/designs.html
+++ b/designs.html
@@ -24,7 +24,24 @@
     <section class="container">
       <h1>My Designs</h1>
       <figure class="main_design">
-        <img src="pics\design1\PmvZTVvhubaDVfYVOGoo95pxNo.png" alt="#" />
+        <img src="pics\design1/rEOIHmdLr8RvUQEZUHdWpXEfKQ.jpg" alt="#" />
+        <a href="design1.html">See more!</a>
+      </figure>
+      <figure class="design2">
+        <img src="pics\design2/5TqzCaPPZDGoNMLPitNlFcgA.png" alt="#" />
+        <a href="#">See more!</a>
+      </figure>
+      <figure class="design3">
+        <img src="pics\design3/ppnU31s7ASYO8leHphNPaPZzk.png" alt="#" />
+        <a href="#">See more!</a>
+      </figure>
+      <figure class="design4">
+        <img src="pics\design4/5jRKqVv3lUVahjHe5mWwY9izeGw.png" alt="#" />
+        <a href="#">See more!</a>
+      </figure>
+      <figure class="design5">
+        <img src="pics\design5/kbQEiwW92CAQtIauOIGknDND1Wk.png" alt="#" />
+        <a href="#">See more!</a>
       </figure>
     </section>
 
