--- a/design1.html
+++ b/design1.html
@@ -129,6 +129,8 @@
       </section>
     </section>
 
-    <footer></footer>
+    <footer>
+      <h3>&copy; 2025</h3>
+    </footer>
   </body>
 </html>
