--- a/designs.html
+++ b/designs.html
@@ -45,6 +45,8 @@
       </figure>
     </section>
 
-    <footer></footer>
+    <footer>
+      <h3>&copy; 2025</h3>
+    </footer>
   </body>
 </html>
