--- a/portfolio.html
+++ b/portfolio.html
@@ -41,7 +41,9 @@
         </p>
       </section>
     </section>
-    <footer></footer>
+    <footer>
+      <h3>&copy; 2025</h3>
+    </footer>
     <script src="portfolio.js"></script>
   </body>
 </html>
