--- a/design1.html
+++ b/design1.html
@@ -129,8 +129,8 @@
       </section>
     </section>
 
-    <footer>
+    <!--<footer>
       <h3>&copy; 2025</h3>
-    </footer>
+    </footer>-->
   </body>
 </html>
