--- a/designs.html
+++ b/designs.html
@@ -45,8 +45,8 @@
       </figure>
     </section>
 
-    <footer>
+    <!--<footer>
       <h3>&copy; 2025</h3>
-    </footer>
+    </footer>-->
   </body>
 </html>
