--- a/designs.html
+++ b/designs.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Portfolio</title>
     <link rel="stylesheet" href="designs.css" />
+    <script src="portfolio.js" defer></script>
   </head>
   <body>
     <header>
@@ -23,7 +24,7 @@
     </header>
     <section class="container">
       <h1>My Designs</h1>
-      <figure class="main_design">
+      <figure class="main_design scale">
         <img src="pics\design1/rEOIHmdLr8RvUQEZUHdWpXEfKQ.jpg" alt="#" />
         <a href="design1.html">See more!</a>
       </figure>
